# c-project-template-linux-rt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
apps/: main.c
include/: controloop.h  log.h  time_funcs.h
src/: CMakeLists.txt  lib.c
src/utils/: logging.c  time_funcs.c
tests/: CMakeLists.txt
tests/test_pthread/: CMakeLists.txt  test_pthread.c
